//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  expires_in Int
  ext_expires_in Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  stopWatchItems StopWatchItem [not null]
  purchaseOrders PurchaseOrder [not null]
  staff Staff [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Menu {
  id Int [pk, increment]
  name String [unique, not null]
  url String [unique, not null]
  icon String [not null]
  listOrder Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Matter {
  id Int [pk, increment]
  code String [unique, not null]
  description String [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  stopWatchItems StopWatchItem [not null]
}

Table Team {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  staff Staff [not null]
  CauseList CauseList [not null]
}

Table Gender {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  staff Staff [not null]
}

Table Town {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  purchaseOrders PurchaseOrder [not null]
}

Table Tax {
  id String [pk]
  name String [unique, not null]
  description String [unique, not null]
  rate Float [unique, not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  PurchaseOrder PurchaseOrder [not null]
}

Table Currency {
  id Int [pk, increment]
  name String [unique, not null]
  initial String [unique, not null]
  purchaseOrders PurchaseOrder [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  asset Asset [not null]
}

Table StaffType {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  designations Designation [not null]
}

Table Designation {
  id Int [pk, increment]
  name String [unique, not null]
  staffTypeId Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  staffType StaffType [not null]
  staff Staff [not null]
}

Table Staff {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  mobile String [not null]
  ext Int [not null]
  staffNo Int [unique, not null]
  avatarUrl String
  teamId Int [not null]
  designationId Int [not null]
  genderId Int [not null]
  causeListCaseId String
  purchaseOrders PurchaseOrder [not null]
  meetingAttendees MeetingAttendee [not null]
  employers LeaveApplication [not null]
  supervisors LeaveApplication [not null]
  partners LeaveApplication [not null]
  hrms LeaveApplication [not null]
  createdById String
  creator User
  designation Designation [not null]
  gender Gender [not null]
  team Team [not null]
  causeListCase CauseListCase
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  newsFeed NewsFeed [not null]
  books Book [not null]
  causeList CauseList [not null]
  fromUser AssetTransaction [not null]
  toUser AssetTransaction [not null]
  asset Asset [not null]
  assetOwner Asset [not null]
  assetTransaction AssetTransaction [not null]
  leaveBalance LeaveBalance
  Project Project [not null]
}

Table Book {
  id String [pk]
  author String [not null]
  title String [unique, not null]
  coverUrl String [not null]
  copies Int [not null]
  edition String [not null]
  isbnIssn String [not null]
  mediaType String [not null]
  publicationYear Int [not null]
  publisher String [not null]
  subject String
  status Boolean [not null, default: true]
  userId String
  user Staff
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table StopWatchItemTask {
  id String [pk]
  name String [unique, not null]
  stopWatchItems StopWatchItem [not null]
}

Table StopWatchItem {
  id Int [pk, increment]
  narration String [not null]
  itemDate DateTime
  startedAt DateTime
  endedAt DateTime
  createdById String [not null]
  stopWatchItemTaskId String [not null]
  matterId Int [not null]
  matter Matter [not null]
  stopWatchItemTask StopWatchItemTask [not null]
  user User [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table PurchaseOrder {
  id String [pk]
  poNumber String [unique, not null]
  type String [not null]
  taxId String [not null]
  tax Tax [not null]
  currencyId Int [not null]
  name String [not null]
  email String [not null]
  phoneNumber String [not null]
  physicalAddress String [not null]
  purchaseItems PurchaseItem [not null]
  approverId String [not null]
  createdById String [not null]
  townId String
  address Int
  postalCode Int
  city String
  country String
  totalAmount Int [not null]
  status Boolean [default: false]
  approver Staff [not null]
  creator User [not null]
  currency Currency [not null]
  town Town
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  approvedOn DateTime
}

Table PurchaseItem {
  id String [pk]
  description String [not null]
  quantity Int [not null]
  cost Int [not null]
  purchaseOrder PurchaseOrder
  purchaseOrderId String
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table AttendanceType {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  MeetingAttendees MeetingAttendee [not null]
}

Table MeetingAttendee {
  id String [pk]
  meetingId String [not null]
  staffId String [not null]
  atendeeTypeId String [not null]
  meeting Meeting [not null]
  staff Staff [not null]
  atendeeType AttendanceType [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Meeting {
  id String [pk]
  title String [not null]
  date DateTime [not null]
  startedAt DateTime [not null]
  endedAt DateTime [not null]
  venue String [not null]
  meetingItems MeetingItem [not null]
  aob AOB [not null]
  staff MeetingAttendee [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table MeetingItem {
  id String [pk]
  action String [not null]
  responsibleId Int [unique, not null]
  dueDate DateTime
  meetingId String [not null]
  status String [not null]
  meeting Meeting [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table AOB {
  id String [pk]
  item String [not null]
  meetingId String [not null]
  meeting Meeting [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table LeaveType {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  leaveApplication LeaveApplication [not null]
}

Table LeaveApplication {
  id String [pk]
  employeeId String [not null]
  leaveTypeId String [not null]
  duration Int [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  reportDate DateTime [not null]
  supervisorId String
  finalApproverId String
  approvingHRMId String
  employee Staff [not null]
  supervisor Staff
  type LeaveType [not null]
  finalApprover Staff
  humanResource Staff
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  leaveSupervisorApproval LeaveSupervisorApproval
  leaveFinalApproval LeaveFinalApproval
  leaveHRMApproval LeaveHRMApproval
}

Table LeaveSupervisorApproval {
  id String [pk]
  leaveApplicationId String [unique, not null]
  comments String [not null]
  status Int [not null, default: 0]
  leaveApplication LeaveApplication [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table LeaveFinalApproval {
  id String [pk]
  leaveApplicationId String [unique, not null]
  comments String [not null]
  status Int [not null, default: 0]
  leaveApplication LeaveApplication [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table LeaveHRMApproval {
  id String [pk]
  leaveApplicationId String [unique, not null]
  comments String [not null]
  status Int [not null, default: 0]
  leaveApplication LeaveApplication [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table LeaveBalance {
  id String [pk]
  staffNo Int [unique, not null]
  staff Staff [not null]
  annualEntitlement Float [not null]
  balanceBroughtForward Float [not null]
  earned Float [not null]
  taken Float [not null]
  sold Float [not null]
  forfeited Float [not null]
  balanceCarryForward Float [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table NewsFeed {
  id String [pk]
  date DateTime [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  articles Article [not null]
  user Staff
  userId String
}

Table Article {
  id String [pk]
  title String [not null]
  content String [not null]
  url String [not null]
  tags String [not null]
  newsFeed NewsFeed
  newsFeedId String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table CauseList {
  id String [pk]
  teamId Int [not null]
  team Team [not null]
  date DateTime [not null]
  cases CauseListCase [not null]
  creatorId String
  createdBy Staff
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table CauseListCase {
  id String [pk]
  coram String [not null]
  virtual Int [not null]
  url String
  case String [not null]
  advocates Staff [not null]
  causeList CauseList
  causeListId String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
}

Table AssetCategory {
  id String [pk]
  name String [unique, not null]
  description String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  assetTypes AssetType [not null]
}

Table AssetType {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  assetCategoryId String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  assetCategory AssetCategory
  asset Asset [not null]
}

Table AssetCondition {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  asset Asset [not null]
}

Table AssetTransactionType {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  assetTransaction AssetTransaction [not null]
}

Table Asset {
  id String [pk]
  name String [not null]
  imageUrl String
  description String [not null]
  serialNumber String [unique]
  ocoTagNumber String [unique]
  location String [not null]
  purchaseDate String
  purchasePrice Float
  currencyId Int
  typeId String [not null]
  conditionId String [not null]
  currentlyWithId String
  createdById String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  type AssetType [not null]
  condition AssetCondition [not null]
  currentlyWith Staff
  createdBy Staff
  currency Currency
  assetTransaction AssetTransaction [not null]
  maintenanceLog AssetMaintenanceLog [not null]
}

Table AssetTransaction {
  id String [pk]
  assetId String [not null]
  assetTransactionTypeId String [not null]
  transactionDate DateTime [not null]
  fromUserId String
  toUserId String [not null]
  createdById String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  asset Asset [not null]
  transactionType AssetTransactionType [not null]
  fromUser Staff
  toUser Staff [not null]
  createdBy Staff
}

Table AssetMaintenanceLog {
  id Int [pk, increment]
  assetId String [not null]
  maintenanceDate DateTime [not null]
  description String
  cost Float
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  asset Asset [not null]
}

Table ProjectTag {
  id Int [pk, increment]
  name String [unique, not null]
  colour String [not null]
  description String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  projects Project [not null]
}

Table Project {
  id String [pk]
  title String [unique, not null]
  description String
  startDate DateTime [not null]
  endDate DateTime [not null]
  reminderDates DateTime[] [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  projectTag ProjectTag
  projectTagId Int
  projectLead Staff
  projectLeadId String [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Designation.staffTypeId > StaffType.id

Ref: Staff.createdById > User.id

Ref: Staff.designationId > Designation.id

Ref: Staff.genderId > Gender.id

Ref: Staff.teamId > Team.id

Ref: Staff.causeListCaseId > CauseListCase.id

Ref: Book.userId > Staff.id

Ref: StopWatchItem.matterId > Matter.id

Ref: StopWatchItem.stopWatchItemTaskId > StopWatchItemTask.id

Ref: StopWatchItem.createdById > User.id

Ref: PurchaseOrder.taxId > Tax.id

Ref: PurchaseOrder.approverId > Staff.id

Ref: PurchaseOrder.createdById > User.id

Ref: PurchaseOrder.currencyId > Currency.id

Ref: PurchaseOrder.townId > Town.id

Ref: PurchaseItem.purchaseOrderId > PurchaseOrder.id

Ref: MeetingAttendee.meetingId > Meeting.id

Ref: MeetingAttendee.staffId > Staff.id

Ref: MeetingAttendee.atendeeTypeId > AttendanceType.id

Ref: MeetingItem.meetingId > Meeting.id

Ref: AOB.meetingId > Meeting.id

Ref: LeaveApplication.employeeId > Staff.id

Ref: LeaveApplication.supervisorId > Staff.id

Ref: LeaveApplication.leaveTypeId > LeaveType.id

Ref: LeaveApplication.finalApproverId > Staff.id

Ref: LeaveApplication.approvingHRMId > Staff.id

Ref: LeaveSupervisorApproval.leaveApplicationId - LeaveApplication.id

Ref: LeaveFinalApproval.leaveApplicationId - LeaveApplication.id

Ref: LeaveHRMApproval.leaveApplicationId - LeaveApplication.id

Ref: LeaveBalance.staffNo - Staff.staffNo

Ref: NewsFeed.userId > Staff.id

Ref: Article.newsFeedId > NewsFeed.id

Ref: CauseList.teamId > Team.id

Ref: CauseList.creatorId > Staff.id

Ref: CauseListCase.causeListId > CauseList.id

Ref: AssetType.assetCategoryId > AssetCategory.id

Ref: Asset.typeId > AssetType.id

Ref: Asset.conditionId > AssetCondition.id

Ref: Asset.currentlyWithId > Staff.id

Ref: Asset.createdById > Staff.id

Ref: Asset.currencyId > Currency.id

Ref: AssetTransaction.assetId > Asset.id

Ref: AssetTransaction.assetTransactionTypeId > AssetTransactionType.id

Ref: AssetTransaction.fromUserId > Staff.id

Ref: AssetTransaction.toUserId > Staff.id

Ref: AssetTransaction.createdById > Staff.id

Ref: AssetMaintenanceLog.assetId > Asset.id

Ref: Project.projectTagId > ProjectTag.id

Ref: Project.projectLeadId > Staff.id